--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
     </div>
 
-    <div class="home" id="home">
+    <div class="home" id="home" style="margin-top: 7vh;">
         <div class="home-item">
             <p>Welcome to your one-stop destination for all things cricket! Our website is dedicated to providing you
                 with the latest cricket news, rankings, and videos.
@@ -34,9 +34,9 @@
     </div>
 
     <!---Icc ranking ------------>
-    <div class="icc-rankings" id="icc-rankings"></div>
+    <div class="icc-rankings" id="icc-rankings" style="margin-top: 7vh;"></div>
 
-    <div class="batsmen-conatiner" id="batsmen">
+    <div class="batsmen-conatiner" id="batsmen" style="margin-top: 7vh;">
         <button id="batsmen-ranking-button">Batsmen Rankings</button>
         <div id="batsmen-ranking-conatiner">
             <div id="batsmen-ranking"></div>
@@ -52,29 +52,6 @@
     </div>
 
 
-
-    <!--
- <div class="batsmen-item" id="batsmenRankings">
-        <h2>Batsmen Rankings</h2>
-        <div class="batsmenRankings">
-        </div>
-    </div>>
-
-   
-
-    <div class="bowler-item" id="bowlerRankings">
-        <h2>Bowler Rankings</h2>
-        <div class="bowlerRankings">
-        </div>
-    </div>
-
-    <div class="team-item" id="teamRankings">
-        <h2>Team Rankings</h2>
-        <div class="teamRankings">
-        </div>
-    </div>
-
--->
     <div class="news" id="news">
         <h2>News</h2>
         <div class="news-items">
